--- a/content/news/2020-08-04.md
+++ b/content/news/2020-08-04.md
@@ -1,9 +1,9 @@
 ---
-path: 'https://spring.io/blog/2020/08/04/spring-cloud-data-flow-2-6-0-released'
-title: 'Spring Cloud Data Flow 2.6.0 Released'
+path: 'https://hetudb.com/blog/2020/08/04/hetudb-0-1-0-released'
+title: 'HetuDB 0.1.0 Released'
 date: '08-04-2020'
 category: 'release'
 image: './thumbs/default.png'
-description: 'Spring Cloud Data Flow 2.6.0'
+description: 'HetuDB 0.1.0'
 external: true
 ---
