--- a/content/news/2020-12-02.md
+++ b/content/news/2020-12-02.md
@@ -1,9 +1,9 @@
 ---
-path: 'https://spring.io/blog/2020/12/02/spring-cloud-data-flow-2-6-4-and-2-7-0-released'
-title: 'Spring Cloud Data Flow 2.6.4 and 2.7.0 Released'
+path: 'https://hetudb.com/blog/2020/12/02/hetudb-0-1-2-released'
+title: 'HetuDB 0.1.2 Released'
 date: '12-02-2020'
 category: 'release'
 image: './thumbs/default.png'
-description: 'Spring Cloud Data Flow 2.6.4 and 2.7.0 Released'
+description: 'HetuDB 0.1.2'
 external: true
 ---
