--- a/content/news/2021-01-26.md
+++ b/content/news/2021-01-26.md
@@ -1,9 +1,9 @@
 ---
-path: 'https://spring.io/blog/2021/01/25/spring-cloud-data-flow-2-7-1-released'
-title: 'Spring Cloud Data Flow 2.7.1 Released'
+path: 'https://hetudb.com/blog/2021/01/26/hetudb-0-1-3-released'
+title: 'HetuDB 0.1.3 Released'
 date: '01-26-2021'
 category: 'release'
 image: './thumbs/default.png'
-description: 'Spring Cloud Data Flow 2.7.1 Released'
+description: 'HetuDB 0.1.3'
 external: true
 ---
